[package]
name = "hyperfr"
version = "0.1.0"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2"
block = "0.1"
anyhow = "1"
libc = "0.2"
bitflags = "1"
memmap = "0.7"
object = "*"
hexdump = "*"
vm-memory = {version = "*", features = ["backend-mmap"]}