[package]
name = "hyperfr"
version = "0.1.0"
authors = ["Igor Katson <igor.katson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = "0.2"
block = "0.1"
anyhow = "1"
libc = "0.2"
bitflags = "1"
memmap = "0.7"
object = "0.23"
hexdump = "0.1"
log = "0.4"
pretty_env_logger = "0.4"
vm-memory = {version = "*", features = ["backend-mmap"]}
paste = "1"
byteorder = "1"
rayon = "1"

[profile.release]
debug = true